istio/base/yaml/simpleweb-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleweb-v1
  labels:
    app: simpleweb
    version: v1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simpleweb
      version: v1
  template:
    metadata:
      labels:
        app: simpleweb
        version: v1
    spec:
      containers:
      - name: simpleweb
        image: codelieche/simpleweb:v1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
        readinessProbe:
          httpGet: 
            path: /health
            port: 8080
          initialDelaySeconds: 30
