istio/base/yaml/simpleweb-virtual-service-02.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb-virtual-service
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - "simpleweb-gateway"
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /health
    route:
    - destination:
        host: simpleweb
        port:
          number: 80
