istio/base/yaml/simpleweb-virtual-service-03.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - "simpleweb-gateway"
  http:
  - route:
    - destination:
        host: simpleweb
        subset: v2
